--- a/css/style.css
+++ b/css/style.css
@@ -61,3 +61,112 @@ header nav a{
     color: var(--enlace);
     margin-left: 8px;
 }
+
+header nav a:hover{
+    color: var(--enlaceSobre);
+}
+
+#home{
+    text-align: center;
+    padding: 250px 0 250px;
+}
+
+#home p{
+    margin-top: 50px;
+    color: rgb(1, 1, 1);
+    font-size: 25px;
+    font-weight: bold;
+}
+
+#home h1{
+    margin-bottom: 45px;
+    font-weight: 700;
+    font-size: 3.2rem;
+    color: #fff;
+}
+
+
+
+.container{
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+section{
+    padding: 80px 0;
+}
+
+section h2{
+    text-align: center;
+    margin-bottom: 50px;
+    font-size: 2.5rem;
+
+    
+    /*seccion novedades*/
+}
+
+#novedades .box{
+    display: inline-block;
+    width: 33%;
+    padding: 8px;
+}
+
+#novedades .box p{
+    text-align: justify;
+}
+
+#novedades .box img{
+    padding-left: 30%;
+    padding-bottom: 10px;
+}
+
+#novedades .box h3{
+    text-align: center;
+}
+
+#categoria .box{
+    width: 33%;
+    display: inline-block;
+    padding: 8px;
+}
+
+#categoria .box img{
+    width: 100%;
+}
+
+#categoria .box p{
+    text-align: justify;
+}
+
+/*contacto*/
+
+#contacto{
+    background-image: url('/images/map-image.png');
+    background-color: rgba(0, 0, 0, 0.692);
+    background-size: cover;
+    width: 100%;
+    text-align: center;
+    margin: 0 auto;
+}
+
+#contacto h2{
+    color: #fff;
+}
+
+#contacto input,select,textarea{
+    width: 600px;
+    padding: 5px 10px;
+    border-radius: 5px;
+    font-size: 18px;
+}
+
+/*footer*/
+footer{
+    width: 100%;
+    text-align: center;
+    color: #fff;
+    padding: 20px 0;
+    background-color: var(--piepagina);
+    
+}
